--- a/package.json
+++ b/package.json
@@ -2,8 +2,9 @@
   "name": "librarie-test",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
+    "start": "nodemon back/server.js",
     "test": "jest"
   },
   "keywords": [],
@@ -17,6 +18,7 @@
     "express": "^4.21.0",
     "jsonwebtoken": "^9.0.2",
     "nodemon": "^3.1.7",
+    "pg": "^8.13.0",
     "sqlite3": "^5.1.7",
     "stripe": "^16.12.0"
   },
